# setlyst-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
docker/: compose.yaml
src/: lib.rs  main.rs
src/config/: cors.rs  environment.rs  logger.rs  mod.rs
src/controllers/: artist.rs  auth.rs  migrations.rs  mod.rs  setlist.rs  song.rs  status.rs  user.rs
src/database/: connection.rs  mod.rs
src/database/migrations/: 0001_add_users_table.sql  0002_add_artists_table.sql  0003_add_songs_table.sql  0004_add_setlists_table.sql  0005_add_user_preferences.sql
src/database/repositories/: artist_repository.rs  mod.rs  setlist_repository.rs  song_repository.rs  user_preferences_repository.rs  user_repository.rs
src/errors/: api_error.rs  auth_error.rs  config_error.rs
src/middlewares/: authentication.rs
src/models/: artist.rs  mod.rs  setlist.rs  song.rs  user.rs  user_preferences.rs
src/models/auth/: access.rs  token.rs
src/openapi/: api_doc.rs
src/routes/: artist.rs  auth.rs  migrations.rs  mod.rs  setlist.rs  song.rs  status.rs  user.rs
src/server/: mod.rs
src/utils/: hashing.rs  jwt.rs
src/validations/: existence.rs  mod.rs  uniqueness.rs
