[package]
name = "setlyst-api"
version = "0.1.0"
authors = ["Allan Somensi <allansomensidev@proton.me>"]
description = "A simple REST API for setlist management."
homepage = "https://github.com/allansomensi/setlyst-api"
repository = "https://github.com/allansomensi/setlyst-api"
readme = "README.md"
keywords = ["api"]
edition = "2024"
license = "MIT"
default-run = "setlyst-api"

[[bin]]
name = "create_superuser"
path = "src/bin/create_superuser.rs"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }
validator = { version = "0.20", features = ["derive"] }
tower_governor = { version = "0.8", features = ["tracing"] }

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = [
    "run-for-all",
    "prepush-hook",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
